ChatGPT suggestions for introductory chapter

--- a/src/1-Intro/1-1_computer-vision-primer/1-1_computer-vision-primer.tex
+++ b/src/1-Intro/1-1_computer-vision-primer/1-1_computer-vision-primer.tex
@@ -1,4 +1,4 @@
-In order to more fully understand and appreciate the process of extracting TKA kinematics from single-plane digital images, we must first explore the basics of computer vision. Specifically, the elements of image formation of and object projection.
+In order to more fully understand the process of extracting total knee arthroplasty kinematics from single-plane digital fluoroscopic images, we must first explore some fundamentals of computer vision, specifically elements of image formation, image processing, and object projection.
 
 \subsection{Geometric Transformations}
 \label{sec:geometric-transformations}
