--- a/src/1-Intro/1-2_machine-learning/1-2_ml.tex
+++ b/src/1-Intro/1-2_machine-learning/1-2_ml.tex
@@ -1,4 +1,6 @@
-One of the biggest limitations in historic forms of image processing and filtering is the need to create and tune the filters that are used for feature extraction. While this gives researchers an exceptional amount of control over the filtering techniques, this is often time consuming and difficult to generalize to new data. Deep learning and neural networks offer algorithms for which feature extraction is automated, and techniques have been introduced that make these algorithms robust to new data.
+A significant limitation of traditional image processing and filtering methods has been the necessity to manually create and fine-tune filters for feature extraction.
+Although this approach provides researchers with considerable control over filtering techniques, it tends to be time-consuming and challenging to generalize across diverse datasets.
+Deep learning and neural networks, however, offer algorithms where feature extraction is automated, introducing techniques that enhance the robustness of these algorithms to novel datasets.
 
 \input{src/1-Intro/1-2_machine-learning/nn-telos.tex}
 \input{src/1-Intro/1-2_machine-learning/neural-network-structure.tex}
