--- a/src/1-Intro/1-2_machine-learning/nn-telos.tex
+++ b/src/1-Intro/1-2_machine-learning/nn-telos.tex
@@ -1,8 +1,11 @@
 \subsection{The Purpose of Neural Networks for Image Processing}
 
-Neural networks for image processing are an attempt to recreate the visual system in animals, creating algorithmic analogies to the various physical neuronal pathways that are present in the image. Typically, there are many different parts of our visual system that we take for granted, such as the ability to see upside down and extrapolate from prior information. While seemingly intuitive, these are difficult feats to determine algorithmically in a mathematical function.
+Neural networks in image processing aim to emulate the visual system of animals (\cref{fig:nn-purpose-zebra}), creating algorithmic analogies to the physical neuronal pathways used in visual perception.
+In the human brain, many aspects of our visual system, such as the ability to interpret images regardless of their orientation and extrapolate from known information, are often taken for granted.
+However, replicating these capabilities algorithmically poses significant challenges.
+Neural networks alleviate the need for manual feature selection, which has been a limitation of traditional image processing methods.
+This automation not only simplifies the process but also enhances the ability of these systems to interpret and process images in ways similar to the human brain, making neural networks a powerful tool in the realm of image processing.
 
-Using neural networks for image processing is an attempt to re-create the visual system by utilizing algorithmic analogies to the human brain. Subjectively, we take many different aspects of our visual system for granted, like the ability to extrapolate to new information, and understand intuitively the notions of size and scale not affecting the content of an image. However, these are extremely difficult to perform with hand-selected features. Neural networks remove the need to feature selection in images, which has made them a powerful tool in the image processing toolbox.
 
 \begin{figure}[h!]
   \centering
